--- a/holasoytutrabajo/practica2/curriculum.css
+++ b/holasoytutrabajo/practica2/curriculum.css
@@ -12,8 +12,8 @@ text-align: center;
 }
 
 div{
-  width: 800px;
-  margin: 0 auto; /* you can change 0 if your want top-bottom margin */
+  width: 1000px;
+  margin: 0 auto;
 }
 
 .introduccion, .redes, .peliculas, .sobre, .pie{
@@ -42,3 +42,33 @@ div{
     background-color: #C61414;
     color: white;
   }
+
+  #sidebar {
+  background-color: #384047;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  width: 120px;
+  text-align: center;
+}
+
+#sidebar ul {
+  list-style: none;
+  padding-left: 0px;
+}
+
+#sidebar li {
+  margin-top:50px;
+  margin-bottom: 50px;
+}
+
+#sidebar a {
+  text-decoration: none;
+  font-size: 25px;
+  color:#788188;
+}
+
+#sidebar a:hover {
+  color: white;
+}
