--- a/indice.css
+++ b/indice.css
@@ -30,6 +30,7 @@ li {
 h1 {
   text-align: center;
   font-size:200%;
+animation-iteration-count: infinite;
 }
 
 a {
@@ -39,3 +40,5 @@ a {
 a:hover {
   color: white;
 }
+
+div.
