--- a/holasoytutrabajo/formularios/formulario1/formulario1.css
+++ b/holasoytutrabajo/formularios/formulario1/formulario1.css
@@ -8,7 +8,7 @@ body{
   background-image: url(https://fondosmil.com/fondo/65723.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-
+background-attachment:
 }
 h1 {
   font-family: "Varsity";
@@ -25,10 +25,12 @@ input[type=text], select {
   border: 1px solid #white;
   border-radius: 4px;
   box-sizing: border-box;
+
+
 }
 
 input[type=submit] {
-  width: 25%;
+  width: 70%;
   background-color:Green;
   color:black;
   padding: 14px 20px;
@@ -36,10 +38,15 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  right: -310px;
+  position: relative;
+  bottom: -50px;
+
 }
 
 input[type=submit]:hover {
   background-color:white;
+
 }
 
 div.formulario1 {
@@ -47,9 +54,11 @@ div.formulario1 {
   background-color:transparent;
   padding: 20px;
   width: 25%;
+
 }
 label {
   color: white;
+
 }
 
 
